width fix for contributor btn on mobile view

--- a/home-page/style.css
+++ b/home-page/style.css
@@ -297,6 +297,9 @@ body::-webkit-scrollbar-thumb {
   .panel{
     width:100%;
   }
+  .contributors-btn{
+    width: 100%;
+  }
 }
 
 /* keyframes */
